@@ -306,7 +306,8 @@ CVS code -
 	  realloc(). (DLR)
   get_accepted_kbinput()
 	- Add proper support for the keypad values and escape sequences
-	  generated by the NumLock glitch. (DLR)
+	  generated by the NumLock glitch and by certain keys on the
+	  numeric keypad. (DLR)
   get_escape_seq_kbinput()
 	- Add proper support for the keypad values and escape sequences
 	  generated by the NumLock glitch. (DLR)
